name:                hadoop-hs
version:             0.1.0.0
synopsis:            Tools for working with Hadoop.
description:         Tools for working with Hadoop.
license:             Apache-2.0
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

executable hh
  default-language: Haskell2010

  main-is: HH.hs
  hs-source-dirs: src

  build-depends:
      base                 == 4.7.*
    , binary               >= 0.7.2 && < 0.8
    , boxes                == 0.1.*
    , bytestring           == 0.10.*
    , cereal               == 0.4.*
    , monad-loops          == 0.4.*
    , network              == 2.5.*
    , old-locale           == 1.0.*
    , pipes                == 4.1.*
    , pipes-bytestring     == 2.1.*
    , protobuf             == 0.2.*
    , snappy               == 0.2.*
    , text                 == 1.1.*
    --, thrift               == 1.0.*
    , time                 == 1.4.*
    , unordered-containers == 0.2.*
    , vector               == 0.10.*
