name:          hadoop-rpc
version:       0.1
synopsis:      Use the Hadoop RPC interface from Haskell.
description:   Use the Hadoop RPC interface from Haskell.
homepage:      http://github.com/jystic/hadoop-rpc
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley, Conrad Parker
maintainer:    Jacob Stanley <jacob@stanley.io>
category:      Data
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    Data.Hadoop.Protobuf.ClientNameNode
    Data.Hadoop.Protobuf.DataTransfer
    Data.Hadoop.Protobuf.Hdfs
    Data.Hadoop.Protobuf.Headers
    Data.Hadoop.Protobuf.ProtocolInfo
    Data.Hadoop.Protobuf.Security
    Data.Hadoop.Types
    Network.Hadoop.Hdfs
    Network.Hadoop.Rpc
    Network.Hadoop.Stream

  build-depends:
      base                 >= 4.7 && < 5
    , attoparsec           >= 0.12.1.2
    , boxes                >= 0.1
    , bytestring           >= 0.10
    , cereal               >= 0.4
    , cereal-conduit       >= 0.7
    , conduit              >= 1.2
    , conduit-extra        >= 1.1
    , configurator         >= 0.3
    , directory            >= 1.2
    , filepath             >= 1.3
    , network              >= 2.5
    , network-simple       >= 0.4
    , old-locale           >= 1.0
    , protobuf             >= 0.2.0.4
    , socks                >= 0.5
    , split                >= 0.2
    , text                 >= 1.1
    , time                 >= 1.4
    , transformers         >= 0.4
    , unix                 >= 2.7
    , unordered-containers >= 0.2
    , xmlhtml              >= 0.2.3.2
