name:          hadoop-rpc
version:       0.1.0.0
synopsis:      Use the Hadoop RPC interface from Haskell.
description:   Use the Hadoop RPC interface from Haskell.
homepage:      http://github.com/jystic/hadoop-rpc
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley, Conrad Parker
maintainer:    Jacob Stanley <jacob@stanley.io>
category:      Data
build-type:    Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options: -funbox-strict-fields

  exposed-modules:
    Data.Hadoop.Configuration
    Data.Hadoop.Protobuf.ClientNameNode
    Data.Hadoop.Protobuf.DataTransfer
    Data.Hadoop.Protobuf.Hdfs
    Data.Hadoop.Protobuf.Headers
    Data.Hadoop.Protobuf.ProtocolInfo
    Data.Hadoop.Protobuf.Security
    Data.Hadoop.Types
    Network.Hadoop.Hdfs
    Network.Hadoop.Read
    Network.Hadoop.Rpc
    Network.Hadoop.Socket
    Network.Hadoop.Stream

  build-depends:
      base                 >= 4.7 && < 5
    , attoparsec           >= 0.12
    , bytestring           >= 0.10
    , cereal               >= 0.4
    , exceptions           >= 0.6
    , network              >= 2.5
    , protobuf             >= 0.2.0.4
    , socks                >= 0.5
    , text                 >= 1.1
    , transformers         >= 0.4
    , unix                 >= 2.7
    , unordered-containers >= 0.2
    , vector               >= 0.10
    , xmlhtml              >= 0.2

executable test-hadoop-rpc
  main-is: Main.hs
  hs-source-dirs: test
  default-language: Haskell2010

  build-depends:
      base >= 4.7 && < 5
    , hadoop-rpc
    , protobuf
    , vector
