name:          hadoop-tools
version:       0.3
synopsis:      Fast command line tools for working with Hadoop.
description:   Fast command line tools for working with Hadoop.
homepage:      http://github.com/jystic/hadoop-tools
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley, Conrad Parker
maintainer:    Jacob Stanley <jacob@stanley.io>
category:      Data
build-type:    Simple
cabal-version: >= 1.10

executable hh
  default-language: Haskell2010

  main-is: Main.hs
  hs-source-dirs: src

  ghc-options: -funbox-strict-fields
  ghc-prof-options: -auto-all -caf-all

  other-modules:
    Paths_hadoop_tools

  build-depends:
      base                 >= 4.7 && < 5
    , attoparsec           >= 0.12
    , boxes                >= 0.1
    , bytestring           >= 0.10
    , configurator         >= 0.3
    , exceptions           >= 0.6
    , filepath             >= 1.3
    , hadoop-rpc           >= 0.1
    , old-locale           >= 1.0
    , optparse-applicative >= 0.10
    , protobuf             >= 0.2.0.4
    , split                >= 0.2
    , text                 >= 1.1
    , time                 >= 1.4
    , transformers         >= 0.4
    , vector               >= 0.10
