name:          hadoop-tools
version:       0.4

synopsis:
  Fast command line tools for working with Hadoop.

description:
  hh - Blazing fast interaction with HDFS
  .
  Currently we only support v7 of the RPC protocol (< CDH5).
  .
  Support for v9 (>= CDH5) is coming soon.
  .
  > hh cat     - Print the contents of a file to stdout
  > hh cd      - Change working directory
  > hh chmod   - Change permissions
  > hh du      - Show the amount of space used by file or directory
  > hh find    - Recursively search a directory tree
  > hh get     - Get a file
  > hh ls      - List the contents of a directory
  > hh mkdir   - Create a directory in the specified location
  > hh pwd     - Print working directory
  > hh rm      - Delete a file or directory
  > hh mv      - Rename a file or directory
  > hh version - Show version information

homepage:      http://github.com/jystic/hadoop-tools
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley, Conrad Parker
maintainer:    Jacob Stanley <jacob@stanley.io>
category:      Data
build-type:    Simple
cabal-version: >= 1.10

executable hh
  default-language: Haskell2010

  main-is: Main.hs
  hs-source-dirs: src

  ghc-options: -funbox-strict-fields
  ghc-prof-options: -auto-all -caf-all

  other-modules:
    Paths_hadoop_tools

  build-depends:
      base                 >= 4.7 && < 5
    , attoparsec           >= 0.12
    , boxes                >= 0.1
    , bytestring           >= 0.10
    , configurator         >= 0.3
    , exceptions           >= 0.6
    , filepath             >= 1.3
    , hadoop-rpc           >= 0.1.1
    , old-locale           >= 1.0
    , optparse-applicative >= 0.10
    , protobuf             >= 0.2.0.4
    , regex-pcre-builtin   >= 0.94
    , split                >= 0.2
    , stm                  >= 2.4
    , text                 >= 1.1
    , time                 >= 1.4
    , transformers         >= 0.4
    , vector               >= 0.10
