name:                hdshow
version:             0.1.0.0
synopsis:            Show a human readable view of Hadoop sequence files.
description:         Show a human readable view of Hadoop sequence files.
license:             Apache-2.0
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
category:            Data
build-type:          Simple
cabal-version:       >= 1.10

executable hdshow
  default-language: Haskell2010

  main-is: Main.hs
  hs-source-dirs: src

  build-depends:
      base             == 4.7.*
    , binary           >= 0.7.2 && < 0.8
    , bytestring       == 0.10.*
    , bytestring-mmap  == 0.2.*
    , lens             == 4.4.*
    , monad-loops      == 0.4.*
    , pipes            == 4.1.*
    , pipes-binary     == 0.4.*
    , pipes-bytestring == 2.1.*
    , pipes-parse      == 3.0.*
    , snappy           == 0.2.*
    , text             == 1.1.*
    , thrift           == 1.0.*
