name:          hadoop-tools
version:       1.0.1

synopsis:
  Fast command line tools for working with Hadoop.

description:
  hh - Blazing fast interaction with HDFS
  .
  These tools support v9 of the Hadoop RPC protocol (CDH 5.x and above).
  .
  > hh cat     - Print the contents of a file to stdout
  > hh cd      - Change working directory
  > hh chmod   - Change permissions
  > hh du      - Show the amount of space used by file or directory
  > hh find    - Recursively search a directory tree
  > hh get     - Get a file
  > hh ls      - List the contents of a directory
  > hh mkdir   - Create a directory in the specified location
  > hh pwd     - Print working directory
  > hh rm      - Delete a file or directory
  > hh mv      - Rename a file or directory
  > hh version - Show version information
  .
  The library itself lets you build other tools which have a similar
  feel to hh, and can reuse the hh config file.

homepage:      http://github.com/jystic/hadoop-tools
license:       Apache-2.0
license-file:  LICENSE
author:        Jacob Stanley, Conrad Parker, Luke Clifton
maintainer:    Jacob Stanley <jacob@stanley.io>
category:      Data
build-type:    Simple
cabal-version: >= 1.10

extra-source-files:
  hh-completion.bash

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -funbox-strict-fields -Wall
  ghc-prof-options: -auto-all -caf-all

  exposed-modules:
    Hadoop.Tools.Configuration
    Hadoop.Tools.Options
    Hadoop.Tools.Options.Glob
    Hadoop.Tools.Options.Chmod
    Hadoop.Tools.Path
    Hadoop.Tools.Run

  build-depends:
      base                 >= 4.8 && < 5
    , attoparsec           >= 0.12
    , bytestring           >= 0.10
    , configurator         >= 0.3
    , clock                >= 0.7.2
    , exceptions           >= 0.6
    , filepath             >= 1.3
    , hadoop-rpc           >= 1.1
    , optparse-applicative >= 0.11
    , regex-pcre-builtin   >= 0.94
    , text                 >= 1.1
    , transformers         >= 0.4
    , vector               >= 0.10

executable hh
  default-language: Haskell2010

  main-is: hh.hs
  hs-source-dirs: main

  ghc-options: -funbox-strict-fields -Wall
  ghc-prof-options: -auto-all -caf-all

  build-depends:
      base                 >= 4.8 && < 5
    , attoparsec           >= 0.12
    , boxes                >= 0.1
    , bytestring           >= 0.10
    , exceptions           >= 0.6
    , filepath             >= 1.3
    , hadoop-rpc           >= 1.1
    , hadoop-tools
    , optparse-applicative >= 0.11
    , regex-pcre-builtin   >= 0.94
    , stm                  >= 2.4
    , text                 >= 1.1
    , time                 >= 1.5
    , transformers         >= 0.4
    , unix                 >= 2.7
    , vector               >= 0.10

test-suite test
  default-language:    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test,src
  main-is:
    test.hs
  build-depends:
      base                 >= 4 && < 5
    , attoparsec
    , bytestring
    , hadoop-rpc
    , tasty                >= 0.7
    , tasty-hunit
    , tasty-quickcheck
    , vector

source-repository head
  type:     git
  location: https://github.com/jystic/hadoop-tools.git
